# claudicle

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.sh
.codex/: config.toml
agent_docs/: soul-architecture.md  tools.md
commands/: INDEX.md  activate.md  daimon.md  ensoul.md  slack-respond.md  slack-sync.md  thinker.md  watcher.md
daemon/: AGENTS.md  INDEX.md  bot.py  claude_handler.py  claudicle.py  claudius.py  config.py  context.py  daimon_converse.py  daimon_registry.py  daimon_speak.py  daimonic.py  inbox_watcher.py  memory_git.py  monitor.py  pipeline.py  requirements.txt  session_store.py  session_title.py  slack_adapter.py  slack_listen.py  slack_log.py  soul_engine.py  soul_log.py  soul_memory.py  terminal_ui.py  tmux-layout.yaml  user_models.py  watcher.py  working_memory.py
docs/: INDEX.md  backstory.md  channel-adapters.md  cognitive-pipeline.md  commands-reference.md  daemon-architecture.md  daimonic-intercession.md  extending-claudicle.md  extending-claudius.md  inbox-watcher.md  installation-guide.md  onboarding-guide.md  rate-limits.md  runtime-modes-comparison.md  scripts-reference.md  session-bridge.md  session-management.md  slack-setup.md  soul-customization.md  soul-stream.md  testing.md  troubleshooting.md  unified-launcher-architecture.md
hooks/: claudicle-handoff.py  claudius-handoff.py  soul-activate.py  soul-deregister.py  soul-registry.py
plans/: INDEX.md
scripts/: INDEX.md  _slack_utils.py  activate_sequence.py  situational_awareness.py  slack_app_home.py  slack_channels.py  (+11 more)
(+115 files in other folders)
